# thirteen

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
docs/: adapter-guide.md  build-guide.md  user-guide.md
firmware/: README.md  platformio.ini
firmware/data/: keymap.json
firmware/src/: input.cpp  input.h  keymap.cpp  keymap.h  leds.cpp  leds.h  main.cpp  pins.h
hardware/: BOM.md  WIRING.md
hardware/case/: README.md  thirteen_case.scad
host/: README.md  pyproject.toml
host/config/: thirteen.example.toml
host/src/thirteen_host/: __init__.py  __main__.py  actions.py  config.py  daemon.py  device.py  hook.py
host/src/thirteen_host/adapters/: __init__.py  claude_code.py  demo.py  generic_stdin.py
host/tests/: test_config.py  test_daemon.py
protocol/: PROTOCOL.md
